<resources>
    <!-- App General -->
    <string name="app_name">TermTracker</string>

    <!-- Menu Icons & Buttons-->
    <string name="home">Home</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="tests">Assessments</string>
    <string name="options">More Options</string>
    <string name="saveButton">Save</string>

    <!-- Home Screen -->
    <string name="home_active_courses">Current Courses</string>
    <string name="home_upcoming_tests">Current Tests</string>

    <!-- Course & Term Strings -->
    <string name="title">Title</string>
    <string name="start_date">Starts</string>
    <string name="end_date">Ends</string>
    <string name="date">Date</string>
    <string name="dash">-</string>
    <string name="status">Status</string>
    <string name="activeCourses">Active Courses</string>
    <string name="noActiveCourses">No active Courses</string>
    <string name="courseFABContentDescription">Add course</string>
    <string name="noActiveTerms">No active terms</string>
    <string name="termFABContentDescription">Add term</string>
    <string name="addTerm">Add term</string>
    <string name="cancel">CANCEL</string>
    <string name="addCourse">Add course</string>
    <string name="noteOptional">Note (Optional)</string>
    <string name="noteLabel">NOTE</string>
    <string name="delete">Delete</string>
    <string name="dateHintStart">Start Date (MM/dd/yy)</string>
    <string name="dateHintEnd">End Date (MM/dd/yy)</string>
    <string name="shareNote">Share note</string>
    <string name="coursesLabel">COURSES</string>
    <string name="onlineCourse">Online Course</string>
    <string name="offlineCourse">Offline Course</string>
    <string name="location">Location</string>
    <string name="platform">Platform</string>
    <string name="search">Search term</string>
    <string name="type">Type</string>
    <string name="number_tests">Number of tests</string>
    <string name="scrollView">Scroll view</string>
    <string name="reportLabel">Report</string>
    <string name="termTitle">Term title</string>
    <string name="searchButton">SEARCH</string>


    <!-- Tests Strings -->
    <string name="noActiveTests">No active Assessments</string>
    <string name="upcomingTests">Upcoming Assessments</string>
    <string name="testFABContentDescription">Add Assessments</string>
    <string name="typeLabel">Type</string>
    <string name="courseLabel">Course:</string>
    <string name="courseTitle">Course Title</string>

    <!-- Instructor Details -->
    <string name="instructor_label">Instructor</string>
    <string name="instructor_full_name">Name</string>
    <string name="instructor_phone">Phone</string>
    <string name="instructor_email">Email</string>

    <!--  Log in page  -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

</resources>