<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_container"
    android:padding="16dp">


    <TextView
        android:id="@+id/test_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="@style/cardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/test_text_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_date"
        android:textAppearance="@style/recyclerViewText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_title" />

    <TextView
        android:id="@+id/test_text_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/dash"
        android:textAppearance="@style/recyclerViewText"
        app:layout_constraintBaseline_toBaselineOf="@id/test_text_start_date"
        app:layout_constraintStart_toEndOf="@id/test_text_start_date" />

    <TextView
        android:id="@+id/test_text_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/end_date"
        android:textAppearance="@style/recyclerViewText"
        app:layout_constraintBaseline_toBaselineOf="@id/test_text_dash"
        app:layout_constraintStart_toEndOf="@id/test_text_dash" />

    <TextView
        android:id="@+id/test_date_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/date"
        android:textAppearance="@style/recyclerViewText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_text_start_date" />

    <TextView
        android:id="@+id/test_date_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/date"
        android:textAppearance="@style/recyclerViewText"
        app:layout_constraintBaseline_toBaselineOf="@id/test_date_dash"
        app:layout_constraintStart_toEndOf="@id/test_date_dash" />

    <TextView
        android:id="@+id/test_date_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/dash"
        android:textAppearance="@style/recyclerViewText"
        app:layout_constraintBaseline_toBaselineOf="@id/test_date_start_date"
        app:layout_constraintStart_toEndOf="@id/test_date_start_date" />

    <TextView
        android:id="@+id/test_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/status_in_progress"
        android:gravity="center"
        android:text="@string/typeLabel"
        app:layout_constraintBottom_toBottomOf="@+id/test_date_end_date"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/course_options_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/more_horiz_24px"
        app:tint="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/options" />


</androidx.constraintlayout.widget.ConstraintLayout>