<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="14dp"
    android:background="@drawable/item_container"
    android:padding="16dp">


    <TextView
        android:id="@+id/term_title"
        style="@style/cardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/term_text_start_date"
        style="@style/recyclerViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/term_title" />

    <TextView
        android:id="@+id/term_text_dash"
        style="@style/recyclerViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/dash"
        app:layout_constraintBaseline_toBaselineOf="@id/term_text_start_date"
        app:layout_constraintStart_toEndOf="@id/term_text_start_date" />

    <TextView
        android:id="@+id/term_text_end_date"
        style="@style/recyclerViewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/end_date"
        app:layout_constraintBaseline_toBaselineOf="@id/term_text_dash"
        app:layout_constraintStart_toEndOf="@id/term_text_dash" />

    <TextView
        android:id="@+id/term_date_start_date"
        style="@style/recyclerViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/term_text_start_date" />

    <TextView
        android:id="@+id/term_date_end_date"
        style="@style/recyclerViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/date"
        app:layout_constraintBaseline_toBaselineOf="@id/term_date_dash"
        app:layout_constraintStart_toEndOf="@id/term_date_dash" />

    <TextView
        android:id="@+id/term_date_dash"
        style="@style/recyclerViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/dash"
        app:layout_constraintBaseline_toBaselineOf="@id/term_date_start_date"
        app:layout_constraintStart_toEndOf="@id/term_date_start_date" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete"
        android:src="@drawable/delete_24px"
        app:layout_constraintBottom_toBottomOf="@+id/term_text_end_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/colorOnPrimary" />


</androidx.constraintlayout.widget.ConstraintLayout>